[project]
name = "pysh"
version = "0+dev"
requires-python = ">=3.8"

dependencies = []


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "mypy",
    "flake8",
    "flake8-pyproject",
]


[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-s"
pythonpath = [
    "src",
]


[tool.mypy]
disallow_untyped_defs = true


[tool.flake8]
max-line-length = 88
per-file-ignores = [
    '__init__.py:F401',
]
