[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov"
pythonpath = "src"


[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []


[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "__init__.py:F401",
]
